--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url= jdbc:postgresql://localhost/WeRecycle
 spring.datasource.username=postgres
-spring.datasource.password=Todoporti12345!
+spring.datasource.password=canchia123
 
 server.port=1010
