--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.jpa.database=postgresql
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost/WeRecycle
+spring.datasource.url= jdbc:postgresql://localhost/WeRecycle2
 spring.datasource.username=postgres
-spring.datasource.password=Hecr@mi20
+spring.datasource.password=host
 
 server.port=8080
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
